--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,9 @@ uvicorn[standard]
 requests
 redis
 overpy
-python-dotenv
 pydantic
+python-dotenv
+numpy==1.26.4
+rasterio==1.3.9
+pystac-client==0.7.6
+planetary-computer==1.0.0
